src/objects/Garantia__c.object
<CustomObject>
    <fields>
        <fullName>GAR_DIV_Importe_Reserva_Media__c</fullName>
        <label>Importe Reserva Media</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GAR_LKP_Compania__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Compañía a la que pertenece la Garantía. Representa la FK al objeto Account para la compañía. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External Id  (Account.CUE_TXT_Identificador__c): Código de compañía HomeServe</description>
        <label>Compañía</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Garantías</relationshipLabel>
        <relationshipName>Garant_as</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GAR_TXT_Codigo_Garantia__c</fullName>
        <description>Muestra el Código de Garantía</description>
        <label>Código de Garantía</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAR_TXT_Descripcion__c</fullName>
        <description>Indica el literal que describe la garantía.</description>
        <label>Descripción</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAR_TXT_Identificador__c</fullName>
        <description>Identificador único (External ID) de las Garantías</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Garantía</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GAR_TXT_Codigo_Garantia__c</columns>
        <columns>GAR_TXT_Descripcion__c</columns>
        <columns>GAR_LKP_Compania__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>GAR-{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantías</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND( ISCHANGED(GAR_TXT_Identificador__c ), GAR_TXT_Identificador__c &lt;&gt; GAR_LKP_Compania__r.CUE_TXT_Identificador__c + &apos;_&apos; + GAR_TXT_Codigo_Garantia__c
), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
</CustomObject>